--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -1,58 +1,63 @@
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <!-- Brand -->
-    <a class="navbar-brand" href="#">Navbar</a>
-  
-    <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li> 
-      </ul>
-    </div> 
-  </nav>
-
+<!-- CONTENEDOR VIDEO  -->
 <div class="container">
       
-      <div class="mt-3">
-          <img src="../../../assets/img/logo-psufacil.png" class="img-fluid mx-auto d-block w-50" />
-      </div>
-      <div class="video-container mt-3">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/qNynQOys8-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <div class="row">
-          <div class="social-icons">
-              <ul class="list-unstyled text-center mb-0">
-              <li class="list-unstyled-item">
-              <a href="#">
-              <i class="fab fa-twitter"></i>
-              </a>
-              </li>
-              <li class="list-unstyled-item">
-              <a href="#">
-              <i class="fab fa-facebook-f"></i>
-              </a>
-              </li>
-              <li class="list-unstyled-item">
-              <a href="#">
-              <i class="fab fa-instagram"></i>
-              </a>
-              </li>
-              </ul>
-              </div>
-      </div>
+  <div class="mt-3">
+      <img src="../../../assets/img/logo-psufacil.png" class="img-fluid mx-auto d-block w-50" />
+  </div>
+  <div class="video-container mt-3">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/qNynQOys8-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
 
-     
+<div class="container-fluid">
+  <div class="row testimony-1">
+    <div class="col-sm-3 col-12 d-flex justify-content-center">
+      <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid"/>
+    </div>
+    <div class="col-sm-9 col-12">
+      <h3>Monserrat Faune</h3>
+      <h4>850 Matemática 2017</h4>
+      <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
+      <small class="smallest mute">- Yayo Dudemous</small>
+    </div>
+  </div>
+  <div class="row testimony-2 bg-primary">
+    <div class="col-sm-3 d-flex justify-content-center">
+      <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid"/>
+    </div>
+    <div class="col-sm-9">
+      <h3>Ulises Campodónico</h3>
+      <h4>850 Matemática 2017</h4>
+      <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. 
+      Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
+      <small class="smallest mute">- Yayo Dudemous</small>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row descriptions">
+      <div class="col-sm-6 form-izq">
+        <h2>¿En qué consiste?</h2>
+        <p>El programa consiste en preparación online por un experto en la PSU de matemática,
+        aquí encontrarás material exclusivo, tips, ensayos y más, todo con el objetivo
+        de que rindas una psu tranquilo, si quieres. <p>
+      </div> 
+      <div class="col-sm-6 form-der">
+      <h2>Sistema de becas</h2>
+      <p>Como sabemos que a veces no es fácil costear un preuniversitario, estaremos otorgando 100 becas 
+        para alumnos de establecimientos municipales o subvencionados que demuestren motivación y/o 
+        buen rendimiento académico </p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+      <div class="row buttonforms bg-primary">
+        <div class="col-sm-6 d-flex justify-content-center">
+          <button type="button" class="btn btn-lg btn-forms">Solicita más información</button>
+        </div>
+        <div class="col-sm-6 d-flex justify-content-center">
+            <button type="button" class="btn btn-forms btn-lg">Solicita una beca</button>
+        </div>
+      </div>
+  </div>
 
 </div>
