--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* Video CSS */
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -13,4 +13,55 @@
     left: 0;
     width: 100%;
     height: 100%;
-    }
+}
+
+/* Testimonios CSS */
+
+.testimony-2 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+
+    
+}
+.testimony-1 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #e06a16;
+}
+
+.buttonforms {
+    padding-top: 2%;
+    padding-bottom: 10%;
+    
+}
+
+.btn-forms {
+    color: #fff;
+    background-color: #e06a16;
+    border-color: #e06a16;
+}
+.btn-forms:hover {
+    color: #fff;
+    background-color: #C95F13;
+    border-color: #C95F13;
+
+}
+/*Formularios*/
+.descriptions {
+    padding-top: 5%;
+}
+
+.form-der {
+    text-align: center;
+    font-family: Helvetica;
+
+}
+
+.form-izq {
+    text-align: center;
+}
+
+.row h3 {
+    font-family: Helvetica;
+
+}
