--- a/src/app/components/form1-w/form1-w.component.html
+++ b/src/app/components/form1-w/form1-w.component.html
@@ -1,5 +1,22 @@
-<p>
-  form1 works
-</p>
+<div class="container">
+  <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="nombre">Nombre:</label>
+      <input type="name" formControlName="nombre" id="nombre" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="correo">Correo:</label>
+      <input type="email" formControlName="correo" id="correo" class="form-control">
+    </div>
 
-<a [routerLink]="['/home']" class = "btn btn-primary">volver</a>
+    <div class="form-check form-check-inline"
+        *ngFor="let tipo of infoForm.controls.tipos.controls; let i = index"
+        formArrayName="tipos">
+      <input type="checkbox" class="form-check-input" [formControlName]="i">
+      <label class="form-check-label">{{ tipos[i].nombre }}</label>
+    </div>
+    <div *ngIf="!infoForm.valid">Debes seleccionar uno</div>
+
+    <button type="submit" class="btn btn-success">Submit</button>
+  </form>
+</div>
