bug form-1 arreglado controls no existe en AbstractControl

--- a/src/app/components/form1-w/form1-w.component.html
+++ b/src/app/components/form1-w/form1-w.component.html
@@ -9,8 +9,8 @@
       <input type="email" formControlName="correo" id="correo" class="form-control">
     </div>
 
-    <div class="form-check form-check-inline"
-        *ngFor="let tipo of infoForm.controls.tipos.controls; let i = index"
+    <div class="form-check form-check-inline" 
+        *ngFor="let tipo of infoForm['controls'].tipos['controls']; let i = index"
         formArrayName="tipos">
       <input type="checkbox" class="form-check-input" [formControlName]="i">
       <label class="form-check-label">{{ tipos[i].nombre }}</label>
