--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -299,48 +299,52 @@
             <div class="modal-body">
               <div class="col-lg-12">
                 <h3 class="section-heading text-uppercase">Formulario beca</h3>
-                <form action="">
+                <form [formGroup]="becaForm">
                   <h4 class="section-subheading">Datos alumno</h4>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Nombres">
+                  <div formGroupName="alumno">  
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2">
+                    </div>
+                    <div class="form-group">
+                      <input type="date" class="form-control" placeholder="Fecha nacimiento" formControlName="fechanac">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Correo" formControlName="correo" (blur)="validForm()">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Rut" formControlName="rut">
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Apellido materno">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Apellido paterno">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Fecha nacimiento">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Correo">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Teléfono">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Rut">
-                  </div>
-                  <h4 class="section-subheading">Datos apoderado</h4>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Nombres">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Apellido materno">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Apellido paterno">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Correo">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Teléfono">
-                  </div>
-                  <h5>Escribe tus razones para obtener la beca:</h5>
-                  <div class="form-group">
-                    <textarea class="form-control" rows="5"></textarea>
+                  <div formGroupName="apoderado">
+                    <h4 class="section-subheading">Datos apoderado</h4>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2"> 
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Correo" formControlName="correo">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
+                    </div>
+                    <h5>Escribe tus razones para obtener la beca:</h5>
+                    <div class="form-group">
+                      <textarea class="form-control" rows="5" formControlName="comentario"></textarea>
+                    </div>
                   </div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
                 </form>
