Referentes a colegio agregados en form

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,12 @@ img {
     align-self: center;
     justify-self: center;
 }
+
+#logo-header{
+    width: 200px;
+
+}
+
+#logo-div{
+    height: 70px;
+}
