--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -3,7 +3,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#home">Psumate</a>
+        <a class="navbar-brand js-scroll-trigger" href="#home">PREMATE</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -28,15 +28,6 @@
     </nav>
 
     <!-- Header -->
-    <!-- <header class="masthead" >
-      <div class="container" id="home">
-        <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
-        </div>
-      </div>
-    </header> -->
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
@@ -45,7 +36,7 @@
           </div>
         </div>
       </div>
-  </header>
+    </header>
 
     <!-- Services -->
     <section id="quienes_somos">
@@ -62,16 +53,17 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Expertos en matemática</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Expertos en PSU matemática</h4>
+            <p class="text-muted"></p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Material exclusivo</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Libro de trabajo</h4>
+            <p class="text-muted">Libro con ejercitación PSU, para que te puedas preparar tranquilamente desde tu casa, con la comodidad de
+                                  resolver los ejercicios en papel!</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -79,7 +71,7 @@
               <i class="fas fa-chalkboard-teacher fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Seguimiento</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Seguimiento constante de tus resultados a través de nuestra plataforma, nos preocupamos de verdad por tu desempeño!</p>
           </div>
         </div>
       </div>
@@ -91,7 +83,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Testimonios</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
         <div class="row">
@@ -107,7 +99,11 @@
                     <h4 class="subheading">Monserrat Faune</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">
+                      Sin lugar a dudas, su motivación, buena onda, dedicación y ejemplos curiosos,
+                      fueron claves en el proceso, enseñándome diferentes métodos de resolución y que 
+                      me permitieron obtener los 850 puntos para mi ingreso a Medicina.
+                    </p>
                   </div>
                 </div>
               </li>
@@ -117,8 +113,8 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>850 PSU Matemática 2016</h4>
+                    <h4 class="subheading">Ulises Campodónico</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -131,15 +127,15 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>850 PSU Matemática 2016</h4>
+                    <h4 class="subheading">Bruno Gálvez</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
+              <!-- <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="../../../assets/img/about/4.jpg" alt="">
                 </div>
@@ -152,12 +148,12 @@
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                   </div>
                 </div>
-              </li>
+              </li> -->
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Be Part
-                    <br>Of Our
-                    <br>Story!</h4>
+                  <h4>Se parte
+                    <br>De Nuestra
+                    <br>Historia!</h4>
                 </div>
               </li>
             </ul>
@@ -322,6 +318,18 @@
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Rut" formControlName="rut">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="País" formControlName="pais">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Región" formControlName="region">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Comuna" formControlName="comuna">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Colegio" formControlName="colegio">
                     </div>
                   </div>
                   <div formGroupName="apoderado">
