modificaciones en los testimonios

--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -3,7 +3,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#home">PREMATE</a>
+        <a class="navbar-brand js-scroll-trigger" href="#home"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -43,18 +43,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Quienes somos</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">¿Cómo te ayudamos?</h2>
+            <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
           </div>
         </div>
         <div class="row text-center">
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Expertos en PSU matemática</h4>
-            <p class="text-muted"></p>
+            <h4 class="service-heading">Clases expositivas</h4>
+            <p class="text-muted">Clases de corta duración, donde se expone la materia seguida de resolución de ejercicios
+              para que entiendas como aplicar la materia al instante.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -102,7 +103,7 @@
                     <p class="text-muted">
                       Sin lugar a dudas, su motivación, buena onda, dedicación y ejemplos curiosos,
                       fueron claves en el proceso, enseñándome diferentes métodos de resolución y que 
-                      me permitieron obtener los 850 puntos para mi ingreso a Medicina.
+                      me permitieron obtener los 850 puntos para mi ingreso a Medicina!
                     </p>
                   </div>
                 </div>
@@ -110,6 +111,23 @@
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="../../../assets/img/about/2.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>850 PSU Matemática 2018</h4>
+                    <h4 class="subheading">Carolina Vera</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">A pesar de que las matemáticas no se me hacían difíciles, me ayudó a mejorar mis habilidades,
+                      con estrategias que me permitieron mejorar en todo ámbito, aumentando la rápidez y disminuyendo los errores en
+                      cada uno de los ensayos!
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/3.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -121,9 +139,9 @@
                   </div>
                 </div>
               </li>
-              <li>
+              <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/4.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -135,20 +153,6 @@
                   </div>
                 </div>
               </li>
-              <!-- <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/4.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li> -->
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Se parte
@@ -169,7 +173,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Postula a una beca</h2>
               <div class="text-center">
-                <p>Para los alumnos interesados, que tengan problemas para pagar, estaremos otorgando becas para alumnos con motivación!</p>
+                <p>Si tienes motivación y ganas de rendir una buena PSU, postula a una beca!</p>
               </div>
           </div>
         </div>
@@ -207,14 +211,14 @@
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" 
+                    <input class="form-control" id="email" 
                     placeholder="Ingresa tu email *" required="required" 
-                    data-validation-required-message="Por favor ingresa tu número telefónico.">
+                    data-validation-required-message="Por favor ingresa tu correo electrónico.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
                     <input class="form-control" id="phone" type="tel" 
-                    placeholder="Ingresa tu teléfono" required="required" 
+                    placeholder="Ingresa tu teléfono *" required="required" 
                     data-validation-required-message="Por favor ingresa tu número telefónico.">
                     <p class="help-block text-danger"></p>
                   </div>
@@ -222,15 +226,15 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <textarea class="form-control" id="message" 
-                    placeholder="Ingresa tu mensaje aquí" required="required" 
-                    data-validation-required-message="Please enter a message."></textarea>
+                    placeholder="Ingresa tu mensaje aquí *" required="required" 
+                    data-validation-required-message="Por favor ingresa un mensaje."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar mensaje</button>
                 </div>
               </div>
             </form>
@@ -244,28 +248,28 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; PSUMATE 2018</span>
+            <span class="copyright">Copyright &copy; PREMATE 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
+                <a href="https://www.instagram.com/premate.cl/" target="_blank">
+                  <i class="fab fa-instagram"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/groups/459469204548498/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
+                  <i class="fab fa-youtube"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
                 <a href="#">Privacy Policy</a>
@@ -274,7 +278,7 @@
                 <a href="#">Terms of Use</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
@@ -295,11 +299,11 @@
             <div class="modal-body">
               <div class="col-lg-12">
                 <h3 class="section-heading text-uppercase">Formulario beca</h3>
-                <form [formGroup]="becaForm">
+                <form [formGroup]="becaForm" (ngSubmit)="guardarCambios()">
                   <h4 class="section-subheading">Datos alumno</h4>
                   <div formGroupName="alumno">  
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres">
+                      <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres"><i class="fas fa-asterisk"></i>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
@@ -311,7 +315,7 @@
                       <input type="date" class="form-control" placeholder="Fecha nacimiento" formControlName="fechanac">
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Correo" formControlName="correo" (blur)="validForm()">
+                      <input type="email" class="form-control" placeholder="Correo" formControlName="correo" (blur)="validForm()">
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
@@ -350,11 +354,13 @@
                       <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
                     </div>
                     <h5>Escribe tus razones para obtener la beca:</h5>
+                    <h6>*Esta es la parte más importante</h6>
                     <div class="form-group">
                       <textarea class="form-control" rows="5" formControlName="comentario"></textarea>
                     </div>
                   </div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
+                  {{ becaForm.valid }}
                 </form>
               </div>
             </div>
