--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -312,7 +312,7 @@
                       <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2">
                     </div>
                     <div class="form-group">
-                      <input type="date" class="form-control" placeholder="Fecha nacimiento" formControlName="fechanac">
+                      <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Fecha nacimiento" formControlName="fechanac">
                     </div>
                     <div class="form-group">
                       <input type="email" class="form-control" placeholder="Correo" formControlName="correo">
