--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#quienes_somos">Quienes Somos</a>
+              <a class="nav-link js-scroll-trigger" href="#quienes_somos">¿Cómo te ayudamos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#testimonios">Testimonios</a>
@@ -72,7 +72,7 @@
               <i class="fas fa-chalkboard-teacher fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Seguimiento</h4>
-            <p class="text-muted">Seguimiento constante de tus resultados a través de nuestra plataforma, nos preocupamos de verdad por tu desempeño!</p>
+            <p class="text-muted">El punto más importante es el seguimiento constante de tus resultados a través de nuestra plataforma, nos preocupamos de verdad por tu desempeño!</p>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/caro.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -127,7 +127,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/ulises.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -135,13 +135,13 @@
                     <h4 class="subheading">Ulises Campodónico</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Con un gran entusiasmo y deseo de enseñar logró potenciar mi conocimiento para hacer eficiente la resolución de la forma de matemáticas, de tal manera que me dio la posibilidad de lograr el máximo y poder continuar con mi pasión por la mecánica en la Universidad de Chile.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../../../assets/img/about/bruno.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -149,7 +149,7 @@
                     <h4 class="subheading">Bruno Gálvez</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Aunque lo conocí en mi periodo final de preparación PSU, en ese poco tiempo logró demostrar el gran talento que tiene para enseñar los contenidos PSU, luego tuve la oportunidad de trabajar con el, en donde reafirmó la gran calidad y dominio en los contenidos, sin duda, una de las personas que conozco que mejor esta capacitado para la enseñanza de esta prueba y más importante aún, una gran persona.</p>
                   </div>
                 </div>
               </li>
